docs-archive/apache-airflow-providers-salesforce/5.15.1/_sources/_api/airflow/providers/salesforce/operators/salesforce_apex_rest/index.rst.txt
airflow.providers.salesforce.operators.salesforce_apex_rest
===========================================================

.. py:module:: airflow.providers.salesforce.operators.salesforce_apex_rest


Classes
-------

.. autoapisummary::

   airflow.providers.salesforce.operators.salesforce_apex_rest.SalesforceApexRestOperator


Module Contents
---------------

.. py:class:: SalesforceApexRestOperator(*, endpoint, method = 'GET', payload, salesforce_conn_id = 'salesforce_default', **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Execute a APEX Rest API action.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:SalesforceApexRestOperator`

   :param endpoint: The REST endpoint for the request.
   :param method: HTTP method for the request (default GET)
   :param payload: A dict of parameters to send in a POST / PUT request
   :param salesforce_conn_id: The :ref:`Salesforce Connection id <howto/connection:salesforce>`.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('salesforce_conn_id',)



   .. py:attribute:: endpoint


   .. py:attribute:: method
      :value: 'GET'



   .. py:attribute:: payload


   .. py:attribute:: salesforce_conn_id
      :value: 'salesforce_default'



   .. py:method:: execute(context)

      Make an HTTP request to an APEX REST endpoint and pushes results to xcom.

      :param context: The task context during execution.
      :return: Apex response



